--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dynamic = ['version']
 description = 'Type annotations for lxml'
 readme = 'README.md'
 requires-python = '>=3.6'
+license-expression = 'Apache-2.0'
 dependencies = [ # version dependency uncertain
     'lxml',
 ]
@@ -24,7 +25,6 @@ classifiers = [
     'Development Status :: 2 - Pre-Alpha',
     'Programming Language :: Python',
     'Intended Audience :: Developers',
-    'License :: OSI Approved :: Apache Software License',
     'Programming Language :: Python :: 3 :: Only',
     'Programming Language :: Python :: 3.6',
     'Programming Language :: Python :: 3.7',
