--- a/test-data/test-etree-et.yml
+++ b/test-data/test-etree-et.yml
@@ -1,7 +1,7 @@
 - case: et_properties
   parametrized:
     - prop: parser
-      rt: "Union[lxml.etree._parser._FeedParser, None]"
+      rt: "Union[lxml.etree._parser.XMLParser[lxml.etree._Element], lxml.etree._parser.HTMLParser[lxml.etree._Element], None]"
     - prop: docinfo
       rt: "lxml.etree.DocInfo"
   main: |
