--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ python =
 commands = pytest {posargs}
 deps =
     pytest-mypy-plugins >= 1.9.2
-    mypy >= 0.920, != 0.940
+    mypy >= 0.941
 
 [testenv:format]
 deps =
@@ -30,7 +30,7 @@ commands =
 
 [testenv:mypy]
 deps =
-    mypy >= 0.920, != 0.940
+    mypy >= 0.941
 skip_install = true
 commands =
     mypy --show-error-codes --show-error-context --pretty lxml-stubs
