Impl lxml.html.soupparser and tests

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@ commands = pytest {posargs}
 deps =
     pytest-mypy-plugins >= 1.9.2
     mypy >= 0.941
+    types-beautifulsoup4
 
 [testenv:format]
 deps =
@@ -31,6 +32,7 @@ commands =
 [testenv:mypy]
 deps =
     mypy >= 0.941
+    types-beautifulsoup4
 skip_install = true
 commands =
     mypy --show-error-codes --show-error-context --pretty lxml-stubs
@@ -38,6 +40,7 @@ commands =
 [testenv:pyright]
 deps =
     pyright
+    types-beautifulsoup4
 skip_install = true
 commands =
     pyright lxml-stubs
